# lambda_calculus

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: Tests.yaml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/api/: errors.rst  terms.rst  visitors.rst
docs/api/terms/: abc.rst  arithmetic.rst  combinators.rst  logic.rst  pairs.rst
docs/api/visitors/: normalisation.rst  substitution.rst  walking.rst
docs/api/visitors/substitution/: checked.rst  renaming.rst  unsafe.rst
lambda_calculus/: __init__.py  errors.py  terms.py
lambda_calculus/terms/: __init__.py  arithmetic.py  combinators.py  logic.py  pairs.py
lambda_calculus/visitors/: __init__.py  normalisation.py  substitution.py  walking.py
lambda_calculus/visitors/substitution/: __init__.py  checked.py  renaming.py  unsafe.py
src/lambda_calculus/: __init__.py
src/lambda_calculus/terms/: __init__.py  abc.py
src/lambda_calculus/visitors/: normalisation.py  walking.py
src/lambda_calculus/visitors/substitution/: checked.py  renaming.py  unsafe.py
tests/: __init__.py  test_errors.py  test_readme.py  test_terms.py
tests/terms/: __init__.py  test_abc.py  test_arithmetic.py  test_combinators.py  test_logic.py  test_pairs.py
tests/visitors/: test_normalisation.py  test_substitution.py  test_walking.py
tests/visitors/substitution/: test_checked.py  test_renaming.py
