[project]
name = "lambda_calculus"
version = "3.1.0"
description = "Implementation of the Lambda calculus"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[[project.authors]]
name = "Eric Niklas Wolf"
email = "eric_niklas.wolf@mailbox.tu-dresden.de"

[project.urls]
Repository = "https://github.com/Deric-W/lambda_calculus"
Documentation = "http://lambda-calculus.readthedocs.io/"
Bugtracker = "https://github.com/Deric-W/lambda_calculus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml] == 7.*"
]

[tool.hatch.envs.test.scripts]
test = "python -m unittest discover {args}"
cov-run = "coverage run -m unittest discover {args}"
cov-report = [
    "- coverage combine",
    "coverage report"
]
cov = [
    "cov-run",
    "cov-report"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
dependencies = [
    "mypy >= 1.0.0",
    "pylint >= 2.12.2",
    "flake8 >= 5.0.0",
    "isort >= 5.10.1"
]

[tool.hatch.envs.lint.scripts]
lint = [
    "- flake8 src/lambda_calculus",
    "- pylint src/lambda_calculus"
]
typecheck = "mypy -p lambda_calculus"
release = [
    "typecheck"
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx ~= 5.2.0",
    "sphinx-pyproject ~= 0.1.0",
    "sphinx-rtd-theme ~= 1.0.0"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build {args} docs docs/_build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.mypy]
disallow_any_unimported = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pylint]
max-line-length = 100

[tool.coverage.run]
source_pkgs = ["lambda_calculus"]
branch = true
parallel = true

[tool.sphinx-pyproject]
project = "lambda_calculus"
copyright = "2022 Eric Wolf"
html_theme = "sphinx_rtd_theme"
extensions = [
    "sphinx.ext.intersphinx",
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode"
]
autodoc_typehints_format = "short"
autodoc_warningiserror = true

[tool.sphinx-pyproject.autodoc_default_options]
show-inheritance = true
member-order = "bysource"